--- a/feedpage.html
+++ b/feedpage.html
@@ -14,7 +14,7 @@
 <body>
     <div class="main">
         <header>
-            <div class="logo"><a href="#">Instamock</a></div>
+            <div class="logo"><a href="#">Instagram</a></div>
             <div class="search"><input type="text" placeholder="Search"></div>
             <div class="top-menu-icons">
                 <div><a href="">a</a></div>
